<?xml version="1.0"?>
<package format="2">
  <name>quad_sim_python_msgs</name>
  <version>0.0.1</version>
  <description>ROS1 Messages for quad_sim_python</description>
  <maintainer email="ricardo.azambuja@gmail.com">rosuser</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dipendenze di build per la generazione di messaggi -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dipendenze di runtime per i messaggi -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
