<?xml version="1.0"?>
<package format="2">
  <name>rclpy_param_helper</name>
  <version>0.0.1</version>
  <description>Convert between Python dictionary and ROS parameters for ROS 1</description>
  <maintainer email="ricardo.azambuja@gmail.com">Ricardo de Azambuja</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3-numpy</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>catkin_lint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <!-- No need to specify build_type for catkin -->
  </export>
</package>
