<?xml version="1.0"?>
<package format="2">
  <name>ros2_quad_sim_python</name>
  <version>0.0.1</version>
  <description>Quadcopter simulator and controller based on Python</description>
  <maintainer email="ricardo.azambuja@gmail.com">Ricardo de Azambuja</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>python3-numpy</build_depend>
  
  <!-- Dipendenze ROS 1 -->
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>

  <!-- Dipendenze messaggi -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>quad_sim_python_msgs</depend>

  <!-- Dipendenze per test -->
  <test_depend>rostest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <!-- No need to specify build_type for catkin -->
  </export>
</package>
